			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04m: *********************************

BUG: (5/17/06, DN) Nodable names must be unique (Bug #850).
FIX: Uniqueness of NodeInst names is database invariant.
     However, uniqueness of NodeProxies is not implemented yet.

BUG: (5/17/06, DN) Regression failed after export rename.
FIX: In library readers (Jelib, Elib, ReadbaleDump) always search exports by exportId.

BUG: (5/17/06, SMR) Bus pins don't select well (Bug #1012).
FIX: In ImmutableNodeInst.computeBounds(), ask the schematics technology
     for the bus pin's size.  One might be tempted to remove the "WipeOn1or2"
     factor from bus pins.  But then, they are always too large, and users
     complain that bus pins at the edges of icons cause the icons to grow.

BUG: (5/17/06, SMR) Cleanup pins doesn't remove zero-length arcs (Bug #1023).
FIX: In CircuitChangeJobs.Reconnect.reconnectArcs, make better check for obtuse angles.

BUG: (5/16/06, DN) Regression failed after export rename.
FIX: In Jelib reader always search exports by exportId.

BUG: (5/16/06, SMR) Including/Excluding multiple sweeps doesn't update explorer
     window (Bug #774).
FIX: In ExplorerTree.setSweepAction(), added call to updateUI().

BUG: (5/16/06, SMR) Waveform window draws numbers badly and creates
     new panels that may not align with others (Bug #1004).
FIX: Improved new panel creation code and "convertToEngineeringNotation"

IMP: (5/16/06, SMR) GDS input now handles invalid node names.  Also mangles
     duplicate export names so that indices don't change (Bug #988).

BUG: (5/16/06, DN) Exception in VectorDrawing (Bug #1002).
FIX: In VectorCache invalidate cache in EThread.

BUG: (5/16/06, DN) IRSIM command launches createWindow in EThread.
FIX: Runs Analyzer.startIrsim in GUI thread instead of Job.

BUG: (5/16/06, DN) Regression failed because of duplicate temporary name.