@@ -4,6 +4,8 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04m: *********************************
 
+IMP/MAN: (5/17/06, GVG) electric.log on MacOX is in user.home instead of user.dir (Bug #1033)
+
 BUG: (5/17/06, DN) Nodable names must be unique (Bug #850).
 FIX: Uniqueness of NodeInst names is database invariant.
      However, uniqueness of NodeProxies is not implemented yet.
